# JustLogV2

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CODEBASE.md  Cargo.toml  Dockerfile  README.md  compose.yaml  docker-compose.yml  openapi.yaml
.github/workflows/: docker-publish.yml  live-network-tests.yml  release-tests.yml  tests.yml
data/: config.template.json
src/: api.rs  app.rs  clock.rs  compact.rs  config.rs  cors.rs  debug_sync.rs  helix.rs  import.rs  import_pipeline.rs  ingest.rs  legacy_txt.rs  lib.rs  main.rs  model.rs  recent_messages.rs  store.rs
tests/: core_integration.rs  debug_sync.rs  import_integration.rs  integration.rs  live_network.rs  network.rs  smoke.rs
tests/common/: mod.rs
