[package]
name = "justlog"
version = "0.1.0"
edition = "2024"
description = "A Twitch chat logger and HTTP API."
repository = "https://github.com/Alb11747/JustLogV2"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
blake3 = "1.8.2"
brotli = "8.0.2"
chrono = { version = "0.4.42", default-features = true, features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
http = "1.3.1"
moka = { version = "0.12.14", features = ["sync"] }
rand = "0.9.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
twitch-irc = { version = "5.0.1", default-features = false }
url = "2.5.7"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
